# kpi-prog_basics_labs

./: .gitignore  CMakeLists.txt  readme.md
BuildTools/CMake/: cxx_version.cmake  generate_vs_filters.cmake  glob_cxx_sources.cmake
BuildTools/Python/: build_tools.py  generate.py  regenerate.py
Code/: CMakeLists.txt
Code/AlgorithmsAndDataStructures/: CMakeLists.txt
Code/AlgorithmsAndDataStructures/lab_1/: CMakeLists.txt
Code/AlgorithmsAndDataStructures/lab_2/: CMakeLists.txt
Code/AlgorithmsAndDataStructures/lab_3/: CMakeLists.txt
Code/AlgorithmsAndDataStructures/lab_4/: CMakeLists.txt
Code/AlgorithmsAndDataStructures/lab_5/: CMakeLists.txt
Code/AlgorithmsAndDataStructures/lab_6/: CMakeLists.txt
Code/AlgorithmsAndDataStructures/lab_7/: CMakeLists.txt
Code/AlgorithmsAndDataStructures/lab_8/: CMakeLists.txt
Code/DiscreteMath/: CMakeLists.txt
Code/DiscreteMath/graph_lib/: CMakeLists.txt
Code/DiscreteMath/graph_lib/include/graph_lib/: AdjacencyMatrix.h  ErrorHandling.h  GetVertexDegree.h  GraphLeeAlgorithm.h  GraphMaxEdgeDisjointPaths.h  GraphMaxFlow.h  InputUtility.h  ReadGraph.h
Code/DiscreteMath/lab_1/: CMakeLists.txt  main.cpp
Code/DiscreteMath/lab_2/: CMakeLists.txt  main.cpp
Code/DiscreteMath/lab_3/: CMakeLists.txt  main.cpp
Code/ProgrammingParadigms/: CMakeLists.txt
Code/ProgrammingParadigms/lab_1/: CMakeLists.txt
Code/ProgrammingParadigms/lab_3/: CMakeLists.txt
Code/ProgrammingParadigms/lab_5/: CMakeLists.txt
Code/lab_1/: CMakeLists.txt
Code/lab_1/task_1/: CMakeLists.txt  main.cpp
Code/lab_1/task_2/: CMakeLists.txt  Equation.cpp
Code/lab_2/task_1/: CMakeLists.txt  main.cpp
Code/lab_3/task_1/: CMakeLists.txt  Equation.cpp  main.cpp
Code/lab_3/task_2/: CMakeLists.txt  main.cpp
Code/lab_4/: CMakeLists.txt
Code/lab_4/task_1/: CMakeLists.txt  main.cpp
(+49 files in other folders)
